# invest-with-langgraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  reorder_notebooks.py  spec.yaml
docs/: IDRIS_GUIDE.md
idris/Domain/: CellAssociation.idr  InvestmentAgent.idr  Notebook1Structure.idr  Notebook3Structure.idr  NotebookCleaning.idr  NotebookStructure.idr  NotebookStructure2.idr  README.md  ReActAgent.idr  Tools.idr  Workflow.idr
notebooks/: 1 generate.ipynb  1_generate.ipynb  2 web_search.ipynb  2_web_search.ipynb  3_tool_agent.ipynb
python/models/: tools.py
python/utils/: README.md  clean_and_reorder_notebooks.py  fix_and_verify_notebooks.py  fix_notebook2.py  fix_notebook2_v2.py  fix_notebook3_comments.py  reorder_notebook3.py  reorder_notebooks.py  reorder_notebooks_spec.py  reorder_with_associations.py  verify_all_notebooks.py  verify_notebook2.py  visualize_associations.py
