[project]
name = "invest-with-langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "joonho",email = "jh.lee@spira-t.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "notebook (>=7.4.4,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langgraph (>=0.5.2,<0.6.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-tavily (>=0.2.7,<0.3.0)"
]


[tool.hatch.build.targets.wheel]
packages = ["src/invest_with_langgraph"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
